src/test/resources/entity_test/invalid/Employee8.entity
Employee8 {

 id:integer { @Id, @NotNull }; // invalid type 'integer'
 
 name : string ;
 
 name : string ; // field defined more than once
 name : long ; // field defined more than once
 name : long ; // field defined more than once
 
 foo : xxx ; // invalid type 'xxx'
 
 comment : string { @Xxxx, @Max(aaa)}; // '@Xxxx' (unknown annotation)   '@Max(aaa)' (numeric parameter required)
} 